# VisionSystem

./: README.md
Calibrator/data/: calib_list.txt  extrinsics.yml  intrinsics.yml  stereo_calib_list.xml
Calibrator/data/stereoData/old_facelab_images/: down1_ns.pcd  out1.pcd  out2.pcd  point2.txt
Calibrator/old calibration code/: calib  calib.cpp  extrinsics_test.yml  intrinsics.yml  intrinsics_test.yml  stereo_calib  stereo_calib.cpp  stereo_calib_list.xml  stereo_calib_original
Calibrator/old calibration code/stereoData/old_facelab_images/: down2_ns.pcd  point1.txt
Calibrator/source/: CMakeLists.txt  calib_list.txt  calibrator.cpp
DBCreator/source/: CMakeLists.txt  DBcreator.cpp
Disparity Comparison/calibData/: extrinsics.yml
Disparity Comparison/source/: CMakeLists.txt  disp_compare.cpp  disparity.cpp
FollowThatObj/data/params/: SURF_SURF_FlannBased.yml
FollowThatObj/source/: CMakeLists.txt  ObjRec.cpp  Tracking.cpp  motor_control.cpp  vision_system.cpp
FollowThatObj/stereomatch_servo/: CMakeLists.txt  facedetect.cpp  facedetect_camera  facedetect_camera.cpp  facedetect_servo  facedetect_servo.cpp  point_xyz.txt  servo_control.c  stereo_match_live.cpp
FollowThatObj/stereomatch_servo/Lin's Code/: facedetect  facedetect_small
FollowThatObj/stereomatch_servo/code/: facetrack-1.cpp  facetrack-2.cpp  facetrack.c  facetrack.cpp  facetrack_ifloop.cpp  robot_eye.c
ObjRecogn/: CMakeLists.txt  ObjRec.cpp
OpenCVExamples/ObjectRec/: CMakeLists.txt  detector_descriptor_evaluation.cpp  detector_descriptor_matcher_evaluation.cpp  matching_to_many_images.cpp
OpenCVExamples/RegionFindingSamples/: CMakeLists.txt  Readme.txt  ffilldemo.cpp  findcontours.cpp  linefinding_canny.cpp  linefinding_laplace.cpp  linefinding_sobel.cpp  meanshift_segmentation.cpp  trackbar.cpp
OpenCVExamples/cv_testData/.svn/: all-wcprops  entries
OpenCVExamples/cv_testData/cameracalibration/.svn/: all-wcprops  entries
OpenCVExamples/cv_testData/cameracalibration/asymmetric_circles/.svn/: all-wcprops  entries
OpenCVExamples/cv_testData/cameracalibration/circles/.svn/: all-wcprops  entries
OpenCVExamples/cv_testData/cameracalibration/subpixel/.svn/: all-wcprops  entries
OpenCVExamples/cv_testData/cascadeandhog/.svn/: all-wcprops  entries
OpenCVExamples/cv_testData/cascadeandhog/cascades/.svn/: all-wcprops  entries
OpenCVExamples/cv_testData/cascadeandhog/images/.svn/: all-wcprops  entries
OpenCVExamples/cv_testData/detectors/.svn/: all-wcprops  entries
OpenCVExamples/cv_testData/detectors_descriptors_evaluation/.svn/: all-wcprops  entries
OpenCVExamples/cv_testData/detectors_descriptors_evaluation/descriptors/.svn/: all-wcprops  entries
OpenCVExamples/cv_testData/detectors_descriptors_evaluation/descriptors/plots/: SIFT_bark.csv  SIFT_bikes.csv  SIFT_boat.csv  SIFT_graf.csv  SIFT_leuven.csv  SIFT_trees.csv  SIFT_ubc.csv  SIFT_wall.csv  SURF_bark.csv  SURF_bikes.csv  SURF_boat.csv  SURF_graf.csv  SURF_leuven.csv  SURF_trees.csv  SURF_ubc.csv  SURF_wall.csv
OpenCVExamples/cv_testData/detectors_descriptors_evaluation/detectors/.svn/: all-wcprops  entries
OpenCVExamples/cv_testData/detectors_descriptors_evaluation/detectors/plots/: FAST_bark_correspondenceCount.csv  FAST_bark_repeatability.csv  FAST_bikes_correspondenceCount.csv  FAST_boat_correspondenceCount.csv  FAST_boat_repeatability.csv  FAST_graf_correspondenceCount.csv  FAST_graf_repeatability.csv  FAST_leuven_correspondenceCount.csv  FAST_leuven_repeatability.csv  FAST_trees_correspondenceCount.csv  FAST_trees_repeatability.csv  FAST_ubc_correspondenceCount.csv  FAST_ubc_repeatability.csv  FAST_wall_correspondenceCount.csv  FAST_wall_repeatability.csv  GFTT_bark_correspondenceCount.csv  GFTT_bark_repeatability.csv  GFTT_bikes_correspondenceCount.csv  GFTT_bikes_repeatability.csv  GFTT_boat_correspondenceCount.csv  GFTT_boat_repeatability.csv  GFTT_graf_correspondenceCount.csv  GFTT_graf_repeatability.csv  GFTT_leuven_correspondenceCount.csv  GFTT_leuven_repeatability.csv  GFTT_trees_correspondenceCount.csv  GFTT_trees_repeatability.csv  GFTT_ubc_correspondenceCount.csv  GFTT_ubc_repeatability.csv  GFTT_wall_correspondenceCount.csv  GFTT_wall_repeatability.csv  HARRIS_bark_correspondenceCount.csv  HARRIS_bark_repeatability.csv  HARRIS_bikes_correspondenceCount.csv  HARRIS_bikes_repeatability.csv  HARRIS_boat_correspondenceCount.csv  HARRIS_boat_repeatability.csv  HARRIS_graf_correspondenceCount.csv  HARRIS_graf_repeatability.csv  HARRIS_leuven_correspondenceCount.csv  (+69 more)
OpenCVExamples/cv_testData/detectors_descriptors_evaluation/images_datasets/.svn/: all-wcprops  entries
OpenCVExamples/cv_testData/fast/.svn/: all-wcprops  entries
OpenCVExamples/cv_testData/features2d/.svn/: all-wcprops  entries
OpenCVExamples/cv_testData/grabcut/.svn/: all-wcprops  entries
OpenCVExamples/cv_testData/inpaint/.svn/: all-wcprops  entries
OpenCVExamples/cv_testData/latentsvmdetector/.svn/: all-wcprops  entries
OpenCVExamples/cv_testData/mser/.svn/: all-wcprops  entries
OpenCVExamples/cv_testData/optflow/.svn/: all-wcprops  entries
OpenCVExamples/cv_testData/shared/.svn/: all-wcprops  entries
OpenCVExamples/cv_testData/snakes/.svn/: all-wcprops  entries
OpenCVExamples/cv_testData/stereo/.svn/: all-wcprops  entries
OpenCVExamples/cv_testData/stereo/case1/.svn/: entries  (+1 more)
OpenCVExamples/cv_testData/stereomatching/.svn/: all-wcprops  entries
OpenCVExamples/cv_testData/watershed/.svn/: all-wcprops  entries
RegionFinding/: CMakeLists.txt  ObjRecClassRF.cpp  RegionFindingLive.cpp  RegionFindingSingle.cpp  meanshift_segmentation.cpp
documentation/: Vision System Compents.txt  compiling instructions.txt  folder discriptions.txt  vision_system_overview.txt
external_libs/jseg/: imgutil.c  ioutil.c  main.c  makefile  mathutil.c  mathutil.h  quan.c  segdist
meta_program/data/params/: ORB_ORB_BruteForce.yml  SURF_FLANN.yml
meta_program/source/: CMakeLists.txt  CMakeLists.txt~  ObjRec.cpp  ObjRec.cpp~  ObjRec_old.cpp  RegionFinding.cpp  RegionFinding.cpp~  vision_system.cpp  vision_system.cpp~  vision_system_2class.cpp
(+48 files in other folders)
